--- a/index.html
+++ b/index.html
@@ -3,15 +3,43 @@
   <head>
     <title>js kick off</title>
   </head>
+<style>
+  table, th, td {
+  border: 1px solid black;
+}
+</style>
+  <script>
+
+// alert("welcome to my site")
+// const name=prompt("enter your name ");
+// console.log(name)
+// document.write("Welcome " + name)
+
+  </script>
+
+  <!-- <body>
+    <div style="margin:40 ; border: 2px solid yellow;">
+      <input type="number" name="" id="num1">
+      <input type="number" name="" id="num2">
+      <p id="result"> </p>
+      <button id="enter no numbers" onclick="calc()"> Calculate</button>
+    </div>
+     
+    <div style="margin:40 ; border: 2px solid pink;">
+      <input type="text" name="" id="exp">
+      <p id="execRes"> </p>
+      <button id="enter no numbers" onclick="execute()"> Execute </button>
+    </div> -->
 
 
-  <body>
     <div id="form" style="margin:40 ; border: 2px solid pink;">
-      <div id="data">
-      </div>
-    </div> 
+      <table id="data">
 
+      </table>
+    </div> 
+     
     <script src="./be.js"></script>
+    <script src="./assign2.js"></script>
    
   </body>
 </html>
